--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.scss
@@ -1,32 +1,31 @@
 @mixin BoxShadow($dp) {
   @if $dp==0 {
-      box-shadow: none;
+    box-shadow: none;
   } @else if $dp==1 {
-      box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   } @else if $dp==2 {
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   } @else if $dp==3 {
-      box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
   } @else if $dp==4 {
-      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
   } @else if $dp==6 {
-      box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12),
-          0 3px 5px -1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
   } @else if $dp==8 {
-      box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12),
-          0 5px 5px -3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12),
+      0 5px 5px -3px rgba(0, 0, 0, 0.2);
   } @else if $dp==9 {
-      box-shadow: 0 9px 12px 1px rgba(0, 0, 0, 0.14), 0 3px 16px 2px rgba(0, 0, 0, 0.12),
-          0 5px 6px -3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 9px 12px 1px rgba(0, 0, 0, 0.14), 0 3px 16px 2px rgba(0, 0, 0, 0.12),
+      0 5px 6px -3px rgba(0, 0, 0, 0.2);
   } @else if $dp==12 {
-      box-shadow: 0 12px 17px 2px rgba(0, 0, 0, 0.14), 0 5px 22px 4px rgba(0, 0, 0, 0.12),
-          0 7px 8px -4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 12px 17px 2px rgba(0, 0, 0, 0.14), 0 5px 22px 4px rgba(0, 0, 0, 0.12),
+      0 7px 8px -4px rgba(0, 0, 0, 0.2);
   } @else if $dp==16 {
-      box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12),
-          0 8px 10px -5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12),
+      0 8px 10px -5px rgba(0, 0, 0, 0.2);
   } @else if $dp==24 {
-      box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12),
-          0 11px 15px -7px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12),
+      0 11px 15px -7px rgba(0, 0, 0, 0.2);
   }
 }
 
@@ -68,27 +67,32 @@
     border-radius: 5px;
     width: 100vw;
     overflow: hidden;
-
   }
 
   .mobile {
     padding-bottom: 30px;
   }
 
-  .selectedCard{
-   display: none;
+  .selectedCard {
+    display: none;
   }
-  .noSelectedCard{
+  .noSelectedCard {
     right: 7px;
   }
-
-  
-
 }
 
+.rank-column {
+  min-width: 200px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-left: rgb(231, 230, 230) 1px solid;
+  border-right: rgb(231, 230, 230) 1px solid;
+  border-top: rgb(231, 230, 230) 1px solid;
+}
 
-
-.red{
+.red {
   background-color: white;
   border-right: rgb(231, 230, 230) 1px solid;
   border-top: rgb(231, 230, 230) 1px solid;
@@ -96,7 +100,7 @@
   // margin: 5px;
 }
 
-.red:first-child{
+.red:first-child {
   background-color: white;
   border-right: rgb(231, 230, 230) 1px solid;
   border-left: rgb(231, 230, 230) 1px solid;
@@ -105,7 +109,7 @@
   // margin: 5px;
 }
 
-.blue{
+.blue {
   background-color: white;
   border-right: rgb(230, 230, 230) 1px solid;
   border-top: rgb(231, 230, 230) 1px solid;
@@ -117,7 +121,6 @@
   border-bottom: rgb(231, 230, 230) 1px solid;
 }
 
-
 .main-container {
   display: flex;
   flex-direction: column;
@@ -125,7 +128,6 @@
   justify-items: center;
   // overflow-x: scroll;
 }
-
 
 .rating-text {
   font-size: 17px;
@@ -166,11 +168,9 @@
   color: grey;
 }
 
-
 .test-name-table:hover {
   @include BoxShadow(6);
 }
-
 
 .scroller-style::-webkit-scrollbar {
   width: 3px;
@@ -192,16 +192,12 @@
   background: #283e90;
 }
 
-
-
-
 textarea {
   resize: none;
   outline: none;
   height: auto;
   overflow: auto;
 }
-
 
 textarea::-webkit-scrollbar {
   width: 3px;
@@ -230,14 +226,14 @@ textarea::-webkit-scrollbar-thumb:hover {
 textarea {
   -webkit-tap-highlight-color: transparent;
   width: 100%;
-  // min-height: 1.5rem; 
-  padding: 0.2rem 0.0rem;
+  // min-height: 1.5rem;
+  padding: 0.2rem 0rem;
   // font-size: 1rem;
   // line-height: 2rem;
   // font-weight: 300;
   background: #ffffff;
   justify-content: center;
-  
+
   border-radius: 6px;
   outline: none;
   // box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
@@ -260,7 +256,6 @@ textarea:focus {
 textarea:placeholder-shown {
   background: none;
 }
-
 
 mat-form-field {
   margin-right: 12px;
@@ -354,18 +349,17 @@ input[type="range"]:focus::-ms-fill-upper {
   background: #ef7f25;
 }
 
-
-@supports(-webkit-appearance: none) or (-moz-appearance: none) {
-  input[type='checkbox'],
-  input[type='radio'] {
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+  input[type="checkbox"],
+  input[type="radio"] {
     --active: #ee7f25;
     --active-inner: #fff;
-    --focus: 2px rgba(39, 94, 254, .3);
-    --border: #BBC1E1;
+    --focus: 2px rgba(39, 94, 254, 0.3);
+    --border: #bbc1e1;
     --border-hover: #ee7f25;
     --background: #fff;
-    --disabled: #F6F8FF;
-    --disabled-inner: #E1E6F9;
+    --disabled: #f6f8ff;
+    --disabled-inner: #e1e6f9;
     -webkit-appearance: none;
     -moz-appearance: none;
     height: 21px;
@@ -377,26 +371,26 @@ input[type="range"]:focus::-ms-fill-upper {
     cursor: pointer;
     border: 1px solid var(--bc, var(--border));
     background: var(--b, var(--background));
-    transition: background .3s, border-color .3s, box-shadow .2s;
+    transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
     &:after {
-      content: '';
+      content: "";
       display: block;
       left: 0;
       top: 0;
       position: absolute;
-      transition: transform var(--d-t, .3s) var(--d-t-e, ease), opacity var(--d-o, .2s);
+      transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
     }
     &:checked {
       --b: var(--active);
       --bc: var(--active);
-      --d-o: .3s;
-      --d-t: .6s;
-      --d-t-e: cubic-bezier(.2, .85, .32, 1.2);
+      --d-o: 0.3s;
+      --d-t: 0.6s;
+      --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
     }
     &:disabled {
       --b: var(--disabled);
       cursor: not-allowed;
-      opacity: .9;
+      opacity: 0.9;
       &:checked {
         --b: var(--disabled-inner);
         --bc: var(--border);
@@ -433,7 +427,7 @@ input[type="range"]:focus::-ms-fill-upper {
       margin-left: 4px;
     }
   }
-  input[type='checkbox'] {
+  input[type="checkbox"] {
     &:not(.switch) {
       border-radius: 7px;
       &:after {
@@ -469,13 +463,13 @@ input[type="range"]:focus::-ms-fill-upper {
       &:disabled {
         &:not(:checked) {
           &:after {
-            opacity: .6;
+            opacity: 0.6;
           }
         }
       }
     }
   }
-  input[type='radio'] {
+  input[type="radio"] {
     border-radius: 50%;
     &:after {
       width: 19px;
@@ -483,10 +477,10 @@ input[type="range"]:focus::-ms-fill-upper {
       border-radius: 50%;
       background: var(--active-inner);
       opacity: 0;
-      transform: scale(var(--s, .7));
+      transform: scale(var(--s, 0.7));
     }
     &:checked {
-      --s: .5;
+      --s: 0.5;
     }
   }
 }
