--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -194,7 +194,7 @@
 
             <!-- <div *ngIf="(y !== 0)" style="color: white;font-size: xx-small;">.</div> -->
             <div class="test-name-table">
-              
+
                 <div *ngFor="let columnName of columnsNames; let e =  index"
                     style="display: flex;align-items: center;justify-content: center;" [ngClass]="(e%2==0)?'red':'blue'"
                     [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px': 
@@ -224,7 +224,7 @@
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 END HEADER TEXT AREA  🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
-                   
+
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 TABLE CELLS  🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
                     <div>
 
@@ -260,8 +260,8 @@
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
                 </div>
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-                <div style="min-width: 230px;background-color:white;display: flex;align-items: center;
-                justify-content: center;border-left: rgb(231, 230, 230) 1px solid;
+                <div style="display: flex;align-items: center;
+                justify-content: center;border-left: rgb(231, 230, 230) 1px solid;min-width: 260px;background-color:white;
                 border-right: rgb(231, 230, 230) 1px solid;border-top: rgb(231, 230, 230) 1px solid;">
                     <div *ngIf="(y !== 0)">
                         <div *ngIf="testName.CRITERIA; else elseBlock">
@@ -270,7 +270,7 @@
                                 <span [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                     style="padding-top:6px;max-width: 200px;">{{criteria.name}}</span>
                                 <div style="min-width: 200px;padding-bottom:6px">
-                                    <mat-icon *ngFor="let star of  criteria.STARS;"
+                                    <mat-icon matRipple *ngFor="let star of  criteria.STARS;"
                                         (click)="setCriteriaRating(star.id,x,y)" [ngClass]="star.styleClass"
                                         (mouseenter)="selectCriteriaStar(star.id,x,y)"
                                         (mouseleave)="leaveCriteriaStar(y,x)"
@@ -280,14 +280,41 @@
                         </div>
                         <ng-template #elseBlock>
                             <div style="position: relative;top: -5px;">
-                                <mat-icon *ngFor="let star of  testName.STARS; let x =  index"
+                                <mat-icon  matRipple  *ngFor="let star of  testName.STARS; let x =  index"
                                     (click)="setRating(star.id,y)" [ngClass]="star.styleClass"
                                     (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
                                     style="outline: none;margin:1px -1px;cursor: pointer;">{{star.icon}}</mat-icon>
                             </div>
                         </ng-template>
                     </div>
-                  
+
+                    <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
+                    <div style="display: flex;">
+                        <button *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;    
+                            color: white;
+                            min-width: 20px;
+                            line-height: 19px;
+                            padding: 2px 0px;
+                            margin: -17px 9px;
+                            position: absolute;
+                            animation: rubberBand 700ms ease-in  forwards;"
+                            mat-button>{{bmxItem.componentText[y]['RATE']}}</button>
+                    </div>
+
+                    <div style="display: flex;gap: 60px;flex-direction: column;">
+                        <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
+                            <button *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
+                             color: white;
+                             min-width: 20px;
+                             line-height: 19px;
+                             padding: 2px 0px;
+                             margin: -3px 7px;
+                             position: absolute;
+                             animation: rubberBand 700ms ease-in  forwards;" mat-button>{{criteria.RATE}}</button>
+                        </div>
+                    </div>
+                    <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
+
                     <textarea *ngIf="y == 0 && editSingleTableCells"
                         [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                         style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
@@ -297,25 +324,7 @@
                         *ngIf="y == 0 && !editSingleTableCells">{{bmxItem.componentSettings[0].ratingScaleTitle}}</div>
                 </div>
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ END STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-                    <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
-                    <button *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " 
-                        style="background-color: #ee7f25;color: white;margin: 23px 12px;width: 30px;
-                               height: 30px;line-height: 30px;right: 0px;
-                               position: absolute;animation: rubberBand 700ms ease-in  forwards;"
-                        mat-icon-button>{{bmxItem.componentText[y]['RATE']}}</button>
-    
-                    <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
-                        <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
-                            <button *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
-                             color: white;
-                             min-width: 20px;
-                             line-height: 19px;
-                             padding: 2px 0px;
-                             position: absolute;
-                             animation: rubberBand 700ms ease-in  forwards;" mat-button>{{criteria.RATE}}</button>
-                        </div>
-                    </div>
-                     <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
+
                 <div *ngIf="(y !== 0) && bmxClientPageOverview"
                     style="min-width: 100px; position: absolute;right: 0px;">
                     <button style="outline: none;margin:3px -8px;" (dblclick)="deletRow(y)" mat-icon-button
