--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -252,3 +252,36 @@
         </button>
     </div>
 </div>
+
+<!-- RULE BOX -->
+<div *ngIf="false" class="save-template-box"
+    style="display: flex;flex-direction: column;align-items: center;justify-content: space-around;">
+    <h2 style="text-align: center;padding-top: 5px;color: #2a3f8a;">{{'Rules Box'}}</h2>
+
+    
+    <p style="text-align: center;color: grey;" *ngIf="templateName.length == 0">or select one to load or update</p>
+    <mat-form-field *ngIf="templateName.length == 0" appearance="outline">
+        <mat-label>Templates</mat-label>
+        <mat-select [(ngModel)]="templateName" (selectionChange)="templateSelected()">
+            <mat-option *ngFor="let template of TEMPLATES " [value]="template">
+                {{template}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <div *ngIf="templateName.length > 3"
+        style="display: flex;flex-direction: row;justify-content: space-evenly; width: 200px;">
+        <button *ngIf="!isSaveOrUpdate" (click)="saveOrUpdateTemplate(templateName)" mat-raised-button
+            style="color: white;background-color: #2a3f8a">
+            save
+        </button>
+        <button *ngIf="isSaveOrUpdate" (click)="saveOrUpdateTemplate(templateName)" mat-raised-button
+            style="color: white;background-color: #8a2a5a">
+            update
+        </button>
+        <p *ngIf="isSaveOrUpdate">or</p>
+        <button *ngIf="isSaveOrUpdate" (click)="loadTemplate(templateName)" mat-raised-button
+            style="color: white;background-color: #2a3f8a">
+            load
+        </button>
+    </div>
+</div>
