--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -309,8 +309,9 @@
                         </ng-template>
                     </div>
                        <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
-                       <div style="display: flex;">
-                        <button *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;    
+                    <div style="display: flex;">
+                        <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"  *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 "
+                            style="background-color: #ee7f25;    
                             color: white;
                             min-width: 20px;
                             line-height: 19px;
@@ -323,7 +324,8 @@
 
                     <div style="display: flex;gap: 60px;flex-direction: column;">
                         <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
-                            <button *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
+                            <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"  *ngIf="criteria.RATE>0 && y != 0 " 
+                            style="background-color: #ee7f25;    
                              color: white;
                              min-width: 20px;
                              line-height: 19px;
