--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -96,4 +96,10 @@
     @include BoxShadow(6);
 }
 
+::ng-deep snack-bar-container {
+    color: white !important;
+    background: #324395 !important;
+  }
+  
+
 
