--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -174,3 +174,9 @@
     border: solid 6px darkgray;
     @include BoxShadow(6);
 }
+
+::ng-deep snack-bar-container {
+    color: white !important;
+    background: #324395 !important;
+  }
+  
