--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -358,25 +358,31 @@
 
             <div class="test-name-table" *ngIf="(y != 0)" [style.height]="(selectedCard == y)?'':'45px'">
 
-                <button *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
-                    height: 30px;
-                    line-height: 30px;right: 7px;
-                    position: absolute;animation: rubberBand 700ms ease-in  forwards;"
-                    mat-icon-button>{{bmxItem.componentText[y]['RATE']}}</button>
-                <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
+                 <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
+                 <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
+                 *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " 
+                 style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
+                 height: 30px;
+                 line-height: 30px;right: 7px;
+                 position: absolute;animation: rubberBand 700ms ease-in  forwards;"
+                 mat-icon-button>{{bmxItem.componentText[y]['RATE']}}</button>
+             <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
 
-                <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
-                    <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
-                        <button *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
-                             color: white;
-                             min-width: 20px;
-                             line-height: 19px;
-                             padding: 2px 0px;
-                             position: absolute;
-                             animation: rubberBand 700ms ease-in  forwards;" mat-button>{{criteria.RATE}}</button>
-                    </div>
-                </div>
+             <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
+                 <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
+                     <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"
+                      *ngIf="criteria.RATE>0 && y != 0 "
+                       style="background-color: #ee7f25;    
+                          color: white;
+                          min-width: 20px;
+                          line-height: 19px;
+                          padding: 2px 0px;
+                          position: absolute;
+                          animation: rubberBand 700ms ease-in  forwards;" mat-button>{{criteria.RATE}}</button>
+                 </div>
+             </div>
+              <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                 <div *ngFor="let columnName of columnsNames; let e =  index">
                     <!-- <div *ngIf="(y == 0)" class="header-title " >
                         <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;"
